Create general page structure

--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
       href="assets/favicon/favicon-16x16.png"
     />
   </head>
-  <body></body>
+  <body>
+    <header>Header</header>
+    <body>
+      Main Content
+    </body>
+    <footer>Footer</footer>
+  </body>
 </html>
