--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
     />
+    <link rel="stylesheet" href="assets/css/style.css"
   </head>
   <body>
     <header>Header</header>
     <body>
-      Main Content
+      <main>Main Content</main>
     </body>
     <footer>Footer</footer>
   </body>
