--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <link rel="stylesheet" href="assets/css/style.css"
   </head>
   <body>
-    <header>Header</header>
+    <header>
+      <a href="index.html"><h1 id="id">Love Running</h1></a>
+    </header>
     <body>
       <main>Main Content</main>
     </body>
