--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Meta tags for search engines-->
     <meta
       name="description"
       content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park"
@@ -11,7 +13,9 @@
       name="keywords"
       content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
     />
+    <!-- Title -->
     <title>Love Running</title>
+    <!--Favicon-->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -29,11 +33,19 @@
       sizes="16x16"
       href="assets/favicon/favicon-16x16.png"
     />
-    <link rel="stylesheet" href="assets/css/style.css"
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+
   <body>
     <header>
-      <a href="index.html"><h1 id="id">Love Running</h1></a>
+      <a href="index.html">
+        <h1 id="id">Love Running</h1>
+      </a>
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label">
+        <i class="fa-solid fa-bars"></i>
+      </label>
       <nav>
         <ul id="menu">
           <li><a href="" class="active">Home</a></li>
@@ -42,9 +54,112 @@
         </ul>
       </nav>
     </header>
-    <body>
-      <main>Main Content</main>
-    </body>
-    <footer>Footer</footer>
+
+    <!--Main Content-->
+    <main>
+      <section id="hero">
+        <div id="cover-text">
+          <h2>Love Running</h2>
+          <h3>Dublin Docklands & Phoenix Park</h3>
+        </div>
+      </section>
+      <section id="reasons">
+        <h2>WHY LOVE RUNNING WITH US?</h2>
+        <div id="benefits">
+          <div id="benefits-physical">
+            <div>
+              <h3>FEEL HEALTHY <i class="fa-solid fa-heartbeat"></i></h3>
+              <hr />
+              <p>
+                Since it improves aerobic fitness, running is a great way to
+                help improve your cardiovascular health. Plus, it burns calories
+                and can build strength.
+              </p>
+            </div>
+            <div>
+              <h3>FEEL STRONG <i class="fa-solid fa-dumbbell"></i></h3>
+              <hr />
+              <p>
+                Running strengthens your heart by pumping blood more effectively
+                through your body.
+              </p>
+            </div>
+          </div>
+          <div id="benefits-mental">
+            <div>
+              <h3>FEEL FREE <icon class="fa-brands fa-fly"></icon></h3>
+              <hr />
+              <p>
+                Physical exercise, running included, is known to release
+                endorphins in the brain. Endorphins make you more energetic,
+                more awake and, yes, happier.
+              </p>
+            </div>
+            <div>
+              <h3>GET SOCIAL <i class="fa-solid fa-globe"></i></h3>
+              <hr />
+              <p>
+                When we run with others, we can run farther and faster more
+                easily. Social running can pull you out of a running funk or low
+                mood, and inspire you to try new events.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!--Footer-->
+    <footer>
+      <ul id="social-networks">
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"
+          >
+            <i class="fa-brands fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.twitter.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Twitter page (opens in a new tab)"
+          >
+            <i class="fa-brands fa-twitter-square"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our YouTube page (opens in a new tab)"
+          >
+            <i class="fa-brands fa-youtube-square"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"
+          >
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
+
+    <!--Font Awesome kit-->
+    <!-- Font Awesome kit -->
+    <script
+      src="https://kit.fontawesome.com/3b20d96fa9.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
