meetup times and bug fixes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <body>
     <header>
       <a href="index.html">
-        <h1 id="id">Love Running</h1>
+        <h1 id="logo">Love Running</h1>
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
       <label for="nav-toggle" class="nav-toggle-label">
@@ -48,9 +48,9 @@
       </label>
       <nav>
         <ul id="menu">
-          <li><a href="" class="active">Home</a></li>
-          <li><a href="">Gallery</a></li>
-          <li><a href="">Sign Up</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="signup.html">Sign Up</a></li>
         </ul>
       </nav>
     </header>
@@ -63,8 +63,10 @@
           <h3>Dublin Docklands & Phoenix Park</h3>
         </div>
       </section>
+
+      <!--Reasons to Run-->
       <section id="reasons">
-        <h2>WHY LOVE RUNNING WITH US?</h2>
+        <h2>Why love running with us?</h2>
         <div id="benefits">
           <div id="benefits-physical">
             <div>
@@ -76,6 +78,7 @@
                 and can build strength.
               </p>
             </div>
+
             <div>
               <h3>FEEL STRONG <i class="fa-solid fa-dumbbell"></i></h3>
               <hr />
@@ -85,6 +88,7 @@
               </p>
             </div>
           </div>
+
           <div id="benefits-mental">
             <div>
               <h3>FEEL FREE <icon class="fa-brands fa-fly"></icon></h3>
@@ -95,6 +99,7 @@
                 more awake and, yes, happier.
               </p>
             </div>
+
             <div>
               <h3>GET SOCIAL <i class="fa-solid fa-globe"></i></h3>
               <hr />
@@ -105,14 +110,16 @@
               </p>
             </div>
           </div>
-          <div #id="benefits-image">
+
+          <div id="benefits-image">
             <div id="circle-cover-bg"></div>
           </div>
         </div>
       </section>
+
       <!--Meetups-->
       <section id="meetups">
-        <h2>Meet-up Times</h2>
+        <h2 class="hidden-heading">Meet-up Times</h2>
         <div id="times">
           <div>
             <h3>Urban <i class="fa-solid fa-city"></i></h3>
@@ -134,7 +141,6 @@
             <p>5K</p>
             <p>The Marker Hotel</p>
             <p>18:30</p>
-          </div>
           </div>
           <div>
             <h3>Trail <i class="fa-solid fa-tree"></i></h3>
